# VectorPrime

./: .dockerignore  .gitignore  CLAUDE.md  COMMIT.md  Cargo.toml  Dockerfile  INSTALLATION_FIX.md  LICENSE  README.md  README_agents.md  UPLOAD_PYPI.md  pyproject.toml  pytest.ini
.claude/: ralph-loop.local.md
.claude/agents/: llmforge-architect.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
assets/: optimus_prime_logo.txt
crates/llmforge-bindings/: Cargo.toml
crates/llmforge-bindings/src/: gpu_lookup.rs  lib.rs
crates/llmforge-core/: Cargo.toml
crates/llmforge-core/src/: lib.rs
crates/llmforge-export/: Cargo.toml
crates/llmforge-export/src/: lib.rs
crates/llmforge-hardware/: Cargo.toml
crates/llmforge-hardware/src/: cpu.rs  lib.rs  mem.rs
crates/llmforge-hardware/src/gpu/: mod.rs  nvidia.rs
crates/llmforge-model-ir/: Cargo.toml
crates/llmforge-model-ir/src/: lib.rs
crates/llmforge-optimizer/: Cargo.toml
crates/llmforge-optimizer/src/: benchmark.rs  estimate.rs  lib.rs  search.rs  selector.rs
crates/llmforge-runtime/: Cargo.toml
crates/llmforge-runtime/src/: convert.rs  dispatch.rs  lib.rs  llamacpp.rs  onnx.rs  tensorrt.rs
crates/vectorprime-bindings/: Cargo.toml
crates/vectorprime-bindings/src/: gpu_lookup.rs  lib.rs
crates/vectorprime-core/: Cargo.toml
crates/vectorprime-core/src/: lib.rs
crates/vectorprime-export/: Cargo.toml
crates/vectorprime-export/src/: lib.rs
crates/vectorprime-hardware/: Cargo.toml
crates/vectorprime-hardware/src/: cpu.rs  lib.rs  mem.rs
crates/vectorprime-hardware/src/gpu/: amd.rs  apple.rs  mod.rs  nvidia.rs
crates/vectorprime-model-ir/: Cargo.toml
crates/vectorprime-model-ir/src/: lib.rs
crates/vectorprime-optimizer/: Cargo.toml
crates/vectorprime-optimizer/src/: bayes.rs  benchmark.rs  cache.rs  estimate.rs  hierarchical.rs  lib.rs  search.rs  selector.rs
crates/vectorprime-runtime/: Cargo.toml
crates/vectorprime-runtime/src/: convert.rs  dispatch.rs  lib.rs  llamacpp.rs  ollama.rs  onnx.rs  tensorrt.rs  vllm.rs
python/llmforge/: __init__.py  cli.py  gguf_to_onnx_runner.py  onnx_to_gguf_runner.py
python/vectorprime/: __init__.py  cli.py  gguf_to_onnx_runner.py  logo.txt  onnx_runner.py  onnx_to_gguf_runner.py
scripts/: build_release.sh  coverity.sh
tests/: conftest.py
tests/fixtures/: FIXTURES.md
tests/integration/: core_types_test.rs  test_analyze_model.py  test_cli.py  test_export.py  test_hardware.py  test_llmforge.py  test_optimize.py
tests/unit/: test_cli.py  test_conversion_runners.py  test_coverage_boost.py  test_pure_logic.py
