[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vectorprime"
version = "0.1.0"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
    "numpy",
    "gguf",
    "onnx"
]

[project.scripts]
vectorprime = "vectorprime.cli:main"

[tool.maturin]
python-source = "python"
module-name = "vectorprime._vectorprime"
manifest-path = "crates/vectorprime-bindings/Cargo.toml"

