[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vectorprime"
version = "0.1.0"
description = "Hardware-aware CLI that selects the best runtime and quantization for efficient LLM inference."
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }

authors = [
  { name = "Daniel Ferreto", email = "ldanielfch@gmail.com" }
]

keywords = [
  "llm",
  "quantization",
  "inference",
  "optimization",
  "vectorization",
  "ai",
  "machine-learning"
]

dependencies = [
    "numpy",
    "gguf",
    "onnx"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage   = "https://github.com/TheRadDani/VectorPrime"
Repository = "https://github.com/TheRadDani/VectorPrime"
Issues     = "https://github.com/TheRadDani/VectorPrime/issues"

[project.scripts]
vectorprime = "vectorprime.cli:main"

[tool.maturin]
python-source = "python"
module-name = "vectorprime._vectorprime"
manifest-path = "crates/vectorprime-bindings/Cargo.toml"