[package]
name = "llmforge-model-ir"
version = "0.1.0"
edition = "2021"
description = "Model IR analyzer — inspects GGUF and ONNX model files to extract metadata (parameter count, architecture, context length, layer count) for use by the LLMForge optimization pipeline."

[dependencies]
llmforge-core = { path = "../llmforge-core" }
anyhow = "1"
# onnx-protobuf 0.2.3 requires protobuf pinned to =3.4.0
onnx-protobuf = "0.2.3"
protobuf = "=3.7.2"

[dev-dependencies]
tempfile = "3"
