[package]
name = "llmforge-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
llmforge-core = { path = "../llmforge-core" }
llmforge-hardware = { path = "../llmforge-hardware" }
llmforge-runtime = { path = "../llmforge-runtime" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
