[package]
name = "vectorprime-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
vectorprime-core = { path = "../vectorprime-core" }
vectorprime-hardware = { path = "../vectorprime-hardware" }
vectorprime-runtime = { path = "../vectorprime-runtime" }
vectorprime-optimizer = { path = "../vectorprime-optimizer" }
vectorprime-export = { path = "../vectorprime-export" }
vectorprime-model-ir = { path = "../vectorprime-model-ir" }
pyo3 = { version = "0.24", features = ["extension-module"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde_json = "1"
anyhow = "1"
