[package]
name = "vectorprime-model-ir"
version = "0.1.0"
edition = "2021"
description = "Model IR analyzer — inspects GGUF and ONNX model files to extract metadata (parameter count, architecture, context length, layer count) for use by the VectorPrime optimization pipeline."

[dependencies]
vectorprime-core = { path = "../vectorprime-core" }
anyhow = "1"
# onnx-protobuf 0.2.3 requires protobuf pinned to =3.4.0
onnx-protobuf = "0.2.3"
protobuf = "=3.4.0"

[dev-dependencies]
tempfile = "3"
