[package]
name = "vectorprime-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
vectorprime-core = { path = "../vectorprime-core" }
vectorprime-hardware = { path = "../vectorprime-hardware" }
vectorprime-runtime = { path = "../vectorprime-runtime" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
