[package]
name = "vectorprime-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
vectorprime-core = { path = "../vectorprime-core" }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
which = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
